# wps-fire-perimeter

./: .env.example  .gitignore  COMPLIANCE.yaml  Dockerfile  Makefile  README.md  earth engine.ipynb  pyproject.toml  query_by_number_and_date.sql  query_fire_by_date.sql  query_fire_by_number.sql
fire_perimeter/: active_fire.py  auth.py  cli.py  client.py  persistence.py  store.py
geoserver/: Dockerfile  Makefile  README.md
openshift/pg_featureserv/: README.md  featureserv.yaml
openshift/rasterserv/: rasterserv.yaml
openshift/templates/: perimeter_cronjob.yaml
pg_featureserv/: README.md  featureserv.yaml
serve-raster/: Dockerfile  Makefile  README.md  pyproject.toml
serve-raster/serve_raster/: main.py
serve-raster/tests/: test_serve_raster.py
tests/: test_fire_boundaries.py
